# blabin

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  pytest.ini  test.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: tests.yml
data/: testing-audio.m4a
prompts/: teacher_v1.yaml
src/: main.py
src/db/: speaker.py
src/llm/: agent.py  client.py  prompt.py
src/llm_client/: client.py
src/vad/: async_vad.py
tests/: test_main.py  test_voice_rec.py
tests/data/: test-agent-response.txt
